# libjsonnet-cpp

./: CMakeLists.txt  README.md  vcsetup.bat
core/: CMakeLists.txt  std.jsonnet.h
cpp/: CMakeLists.txt
examples/cmake-addsubdir/: CMakeLists.txt  README.md  main.cc
examples/simple/: Makefile
